--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@ title: Home
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-2/3 text-lg leading-relaxed text-gray-300">
                         <p class="mb-4">
-                            A passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions.
-                        </p>
-                        <p class="mb-4">
-                           I enjoy tackling complex challenges and turning data into actionable insights.
+                            A passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions. I enjoy tackling complex challenges and turning data into actionable insights.
                         </p>
                         <p>
                             When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good music.
@@ -41,10 +38,108 @@ title: Home
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">OpenCV</span>
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Pandas</span>
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Power BI</span>
+                            <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Microsoft BI suite</span>
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Docker</span>
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Kubernetes</span>
                             <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">Git & GitHub</span>
                              <span class="bg-indigo-500 text-white text-sm font-medium px-3 py-1 rounded-full">AWS</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    <!-- Experience & Education Section -->
+        <section id="experience" class="section py-20 bg-gray-900">
+            <div class="container mx-auto px-6">
+                <!-- Work Experience -->
+                <div class="mb-16">
+                    <h2 class="text-3xl font-bold text-center mb-12">Work Experience</h2>
+                    <div class="max-w-4xl mx-auto space-y-8">
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <h3 class="text-xl font-bold text-indigo-400">Senior, Software Engineer</h3>
+                                <div class="text-gray-400">
+                                    <span class="mr-4">Digital Government Committee</span>
+                                    <span>2022 - Present</span>
+                                </div>
+                            </div>
+                            <ul class="list-disc list-inside text-gray-300 space-y-2">
+                                <li>Led the development prototype of computer vision solutions for smart traffic management</li>
+                                <li>Contributed to the foundational research and development of a Khmer Large Language Model.</li>
+                                <li>Led the research and development of a new design of Khmer Keyboard with Ngram language model.</li>
+                                <li>Research and development for an EKYC system, leveraging facial recognition and Khmer OCR to streamline identity verification processes.</li>
+                            </ul>
+                        </div>
+                        
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <h3 class="text-xl font-bold text-indigo-400">Adjunct Lecturer</h3>
+                                <div class="text-gray-400">
+                                    <span class="mr-4">American University of Phnom Penh</span>
+                                    <span>2023 - 2025</span>
+                                </div>
+                            </div>
+                            <ul class="list-disc list-inside text-gray-300 space-y-2">
+                                <li>Introduction to Machine Learning (35h).</li>
+                                <li>Introduction to Information Technology (45h).</li>
+                                <li>Operating Systems (135h).</li>
+                            </ul>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <h3 class="text-xl font-bold text-indigo-400">Senior, Operational Report</h3>
+                                <div class="text-gray-400">
+                                    <span class="mr-4">Amret Microfinance Institution</span>
+                                    <span>2021 - 2022</span>
+                                </div>
+                            </div>
+                            <ul class="list-disc list-inside text-gray-300 space-y-2">
+                                <li>Designed interactive dashboards in Power BI (DAX, SSRS, SSAS) to provide real-time KPIs—credit disbursement, portfolio at risk, branch performance.</li>
+                                <li>Automated daily reporting workflows with Python scripts (pandas, pyodbc), reducing manual report generation time.</li>
+                                <li>Developed and maintained a reporting database, optimizing query performance by up to 50%.</li>
+                            </ul>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <h3 class="text-xl font-bold text-indigo-400">Electronic Software Engineer</h3>
+                                <div class="text-gray-400">
+                                    <span class="mr-4">Solar Green Energy Cambodia</span>
+                                    <span>2018 - 2019</span>
+                                </div>
+                            </div>
+                            <ul class="list-disc list-inside text-gray-300 space-y-2">
+                                <li>Develop and maintain the solar tracker system.</li>
+                                <li>Research and Develop an IoT device for collecting energy data over the internet.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Education -->
+                <div>
+                    <h2 class="text-3xl font-bold text-center mb-12">Education</h2>
+                    <div class="max-w-4xl mx-auto space-y-8">
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <div>
+                                    <h3 class="text-xl font-bold text-indigo-400">Master of Science in Engineering</h3>
+                                    <p class="text-gray-400">Soonchunhyang University</p>
+                                </div>
+                                <div class="text-gray-400">2019 - 2021</div>
+                            </div>
+                            <p class="text-gray-300">Focused on Machine Learning, Signal Processing, and Health Care Data.</p>
+                        </div>
+
+                        <div class="bg-gray-800 rounded-lg p-6 shadow-lg">
+                            <div class="flex flex-col md:flex-row justify-between mb-4">
+                                <div>
+                                    <h3 class="text-xl font-bold text-indigo-400">Bachelor of Engineering in Electronic and Telecommunication</h3>
+                                    <p class="text-gray-400">Royal University of Phnom Penh</p>
+                                </div>
+                                <div class="text-gray-400">2015 - 2019</div>
+                            </div>
+                            <p class="text-gray-300">Major in Electronic and Telecommunication.</p>
                         </div>
                     </div>
                 </div>
