--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Home
         <!-- Hero Section -->
         <section id="hero" class="bg-gray-900 text-white text-center py-20 md:py-32">
             <div class="container mx-auto px-6">
-                <img src="images/me.jfif" alt="Chhayly Lim" class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full mb-6 border-4 border-indigo-500 shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/150x150/667eea/ffffff?text=CL';">
+                <img src="assets/images/me.jfif" alt="Chhayly Lim" class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full mb-6 border-4 border-indigo-500 shadow-lg" onerror="this.onerror=null;this.src='https://placehold.co/150x150/667eea/ffffff?text=CL';">
                 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4">Hi, I'm Chhayly</h1>
-                <p class="text-lg md:text-2xl text-gray-300">AI/Software Engineer & Educator</p>
+                <p class="text-lg md:text-2xl text-gray-300">ML Engineer & Educator</p>
                 <p class="text-lg md:text-1xl text-gray-300">I build things for humanity</p>
                 <a href="#projects" class="mt-8 inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300">View My Work</a>
             </div>
@@ -21,7 +21,7 @@ title: Home
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-2/3 text-lg leading-relaxed text-gray-300">
                         <p class="mb-4">
-                            A passionate and motivated AI professional and Software Engineer. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions. I enjoy tackling complex challenges and turning data into actionable insights.
+                            A passionate and motivated ML Engineer & Educator. I specialize in researching and developing machine learning models for real-world applications, including eKYC systems, large language models, and computer vision for smart traffic solutions. I enjoy tackling complex challenges and turning data into actionable insights.
                         </p>
                         <p>
                             When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or enjoying a good music.
@@ -65,10 +65,11 @@ title: Home
                                 </div>
                             </div>
                             <ul class="list-disc list-inside text-gray-300 space-y-2">
-                                <li>Led the development prototype of computer vision solutions for smart traffic management</li>
-                                <li>Contributed to the foundational research and development of a Khmer Large Language Model.</li>
-                                <li>Led the research and development of a new design of Khmer Keyboard with Ngram language model.</li>
-                                <li>Research and development for an EKYC system, leveraging facial recognition and Khmer OCR to streamline identity verification processes.</li>
+                                <li>Led a team in the design and prototyping of a Smart Traffic Management System, utilizing computer vision techniques for vehicle detection, traffic flow analysis, and incident detection.</li>
+                                <li>Contributed to the foundational research and development of a Khmer Large Language Model, focusing on data collection, model training, and fine-tuning.</li>
+                                <li>Spearheaded the design and prototyping of an innovative Khmer Keyboard layout for smartphones. This project included developing a robust next-word prediction feature, leveraging N-gram and Trie data structure algorithms for an enhanced user experience.</li>
+                                <li>Contributed to the research and development of an eKYC system, leveraging facial recognition and Khmer OCR to streamline identity verification processes.</li>
+                                <li>Mentored and guided internship students in formulating their research proposal topics, achieving a 100% success rate among all students.</li>
                             </ul>
                         </div>
                         
